--- a/public/style.css
+++ b/public/style.css
@@ -376,9 +376,9 @@ form > button {
   margin: 10px;
 }
 
-/* .new-workout {
+.new-workout {
   display: none;
-} */
+}
 
 .mt {
   margin-top: 20px;
